# ccs2bigraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
ccs2bigraph/: __main__.py  config.py  translation.py
ccs2bigraph/bigraph/: representation.py  validation.py
ccs2bigraph/ccs/: augmentation.py  evaluation.py  finite_pure_grammar.py  grammar.py  parser.py  representation.py  validation.py
ccs2bigraph/templates/: bigraphs.big  brs.big  controls.big  reactions.big
res/: example.ccs  example_2.ccs  mutual_recursion.ccs  recursion.ccs  register.ccs  small.ccs  smaller.ccs
tests/: test_bigraph_representation.py  test_bigraph_validation.py  test_ccs_grammar.py  test_ccs_representation.py  test_ccs_validation.py  test_doctests.py  test_translation.py
tests/res/: basic_buffer.ccs  dekker.ccs
tests/test_ccs/: test_ccs_augmentation.py  test_ccs_finite_pure_grammar.py  test_ccs_grammar.py  test_ccs_representation.py  test_ccs_validation.py
